# prodigee-tuts-point

./: .editorconfig  .gitignore  CONTEXT.md  Directory.Build.props  Directory.Packages.props  MEMORY.md  ProdigeeTutsPoint.slnx  README.md  dotnet-tools.json  pyproject.toml  pyrightconfig.json
content/sources/: books.yml
docs/: CONTENT_QUALITY_STANDARD.md  CURRICULUM_ARCHITECTURE.md  CURRICULUM_AUTHORING_WAVES.md  CURRICULUM_COVERAGE_MAP.md  CURRICULUM_PROJECT_LADDERS.md  ENGINEERING_CORE_CURRICULUM.md  IMPLEMENTATION_PHASES.md  PRODUCT_SPEC.md  TECHNICAL_ARCHITECTURE.md  VERTICAL_SLICE_1.md
docs/adr/: 0001-hybrid-curriculum-content-storage.md  0002-host-process-first-code-execution.md  0003-full-csharp-intellisense-in-first-slice.md  0004-real-dotnet-projects-for-csharp-exercises.md  0005-tests-static-analysis-and-ai-review-for-project-validation.md  0006-swiftpm-and-sourcekit-lsp-for-swift-exercises.md  0007-python-fastapi-pyright-ruff-workspaces.md
docs/review-notes/: 0001-0009-remediation.md  0001-0009-review-r2.md  0001-0009-review.md  0010-0012-review.md  0013-0015-review.md  0018-0027-review.md
docs/tasks/: 0001-scaffold-dotnet-react-app.md  0002-build-local-app-shell.md  0003-implement-hybrid-content-loading.md  0004-render-first-curriculum-path.md  0005-add-source-notes-search.md  0006-add-diagnostic-and-soft-locks.md  0007-build-monaco-csharp-workspace.md  0008-generate-dotnet-exercise-workspaces.md  0009-run-csharp-exercise-tests.md  0010-add-hints-solutions-attempts.md  0011-add-static-analysis-feedback.md  0012-add-ai-review-providers.md  (+45 more)
(+437 files in other folders)
