[project]
name = "prodigee-tuts-point-python-tools"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "basedpyright>=1.31.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pyright>=1.1.400",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
  "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingImports = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
